--- a/retoure-delivery-tomee/pom.xml
+++ b/retoure-delivery-tomee/pom.xml
@@ -106,12 +106,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.18.1</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xms32m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.surefire</groupId>
@@ -119,6 +123,11 @@
                         <version>2.18.1</version>
                     </dependency>
                 </dependencies>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xms32m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <id>failsafe-integration-test</id>
